--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongodb": "^3.6.5",
     "mongoose": "^5.12.0",
     "node": "^15.10.0",
+    "nodemailer": "^6.5.0",
     "nodemon": "^2.0.7"
   }
 }
